maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: not found: value hateur
  	for (h<-0 to hateur-1 ; l <- 0 to largeur-1)
                     ^